force-app/main/default/objects/City__c/fields/CurrentTypeLocalityNum__c.field-meta.xml
<CustomField>
    <fullName>CurrentTypeLocalityNum__c</fullName>
    <label>צורת יישוב שוטפת</label>
    <length>255</length>
    <type>Text</type>
</CustomField>