force-app/main/default/objects/City__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <formula>CASE(
		DistrictNum__c, &apos;1&apos;, &apos;ירושלים&apos;, 
		&apos;2&apos;, &apos;הצפון&apos;,
		&apos;3&apos;, &apos;חיפה&apos;,
		&apos;4&apos;, &apos;המרכז&apos;,
		&apos;5&apos;, &apos;תל אביב&apos;,
		&apos;6&apos;, &apos;הדרום&apos;,
		&apos;7&apos;, &apos;אזור יהודה ושומרון&apos;,
		&apos;לא מוגדר&apos;
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מחוז</label>
    <type>Text</type>
</CustomField>