force-app/main/default/objects/City__c/fields/District_Picklist__c.field-meta.xml
<CustomField>
    <fullName>District_Picklist__c</fullName>
    <label>District Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>אזור ירושלים</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>אזור הצפון</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>אזור חיפה</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>אזור המרכז</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>אזור תל אביב</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>אזור הדרום</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>יהודה ושומרון</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>