force-app/main/default/objects/City__c/fields/DistrictNum__c.field-meta.xml
<CustomField>
    <fullName>DistrictNum__c</fullName>
    <label>מחוז מספר</label>
    <length>255</length>
    <type>Text</type>
</CustomField>