force-app/main/default/objects/City__c/fields/IsSearchable__c.field-meta.xml
<CustomField>
    <fullName>IsSearchable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSearchable</label>
    <type>Checkbox</type>
</CustomField>