force-app/main/default/objects/City__c/fields/NameEng__c.field-meta.xml
<CustomField>
    <fullName>NameEng__c</fullName>
    <label>תעתיק</label>
    <length>255</length>
    <type>Text</type>
</CustomField>