force-app/main/default/objects/City__c/fields/NameHalamas__c.field-meta.xml
<CustomField>
    <fullName>NameHalamas__c</fullName>
    <label>שם יישוב</label>
    <length>255</length>
    <type>Text</type>
</CustomField>