force-app/main/default/objects/City__c/fields/NameIntegrity__c.field-meta.xml
<CustomField>
    <fullName>NameIntegrity__c</fullName>
    <formula>Name  =   NameHalamas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameIntegrity</label>
    <type>Checkbox</type>
</CustomField>