force-app/main/default/objects/City__c/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <formula>CASE( 
	ReligionNum__c , 
	&apos;1&apos;, &apos;יהודי&apos;, 
	&apos;2&apos;, &apos;לא יהודי&apos;, 
	&apos;3&apos;, &apos;שבט בדווים&apos;, 
	&apos;4&apos;, &apos;ישוב מעורב&apos;, 
	&apos;לא מוגדר&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>דת יישוב</label>
    <type>Text</type>
</CustomField>