force-app/main/default/objects/City__c/fields/YearEstablished__c.field-meta.xml
<CustomField>
    <fullName>YearEstablished__c</fullName>
    <label>שנת ייסוד</label>
    <length>5</length>
    <type>Text</type>
</CustomField>