force-app/main/default/objects/City__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NameHalamas__c</columns>
    <columns>NameIntegrity__c</columns>
    <columns>NameEng__c</columns>
    <columns>Code__c</columns>
    <columns>DistrictNum__c</columns>
    <columns>SubDistrictNum__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SubDistrict__c</columns>
    <columns>Geolocation__Latitude__s</columns>
    <columns>Geolocation__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>