force-app/main/default/objects/City__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>NameExtId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>